--- a/javascrip_basic/compere/index.html
+++ b/javascrip_basic/compere/index.html
@@ -9,7 +9,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="" />
     <style>
         .marks {
             background: red;
@@ -51,6 +50,8 @@
                         <button type="button" onclick="addingItemKeyWord()" style="margin-left: 25px;"
                             class="btn btn-primary">adding</button>
                     </div>
+                    <button type="button" onclick="removeAllItemsKeyWords()" style="margin-left: 5px;"
+                            class="btn btn-danger">Clear all key word</button>
                     <textarea id="input" type="text" class="form-control"
                         style="display: flex; width:345px; height: 10pc; margin-top: 5px;"></textarea>
                     <button id="push" type="button" onclick="searchAll()" class="btn btn-primary"
@@ -70,7 +71,7 @@
             </div>
         </div>
     <section>
-    <script src="./Js.js"></script>
+    <script src="./FindWord.js"></script>
 </body>
 
 </html>
